some quick defensive things to try to help spring + wls92
- enable GC logging in containers
- only run the 4 node variant of load tests
- split out WebFlowTest